fix: fix z-index on cervejeras page

--- a/src/Styles/pages/cervejeiras/_cervejeiras-vitrine-default.scss
+++ b/src/Styles/pages/cervejeiras/_cervejeiras-vitrine-default.scss
@@ -104,7 +104,7 @@
 						opacity: 1;
 						position: absolute;
 						width: 100%;
-						z-index: 10;
+						z-index: 3;
 					}
 
 					&[href*='amarela']:before { background: url('/arquivos/pagina-cervejeiras__cervejeira-amarela-frente.png') center center no-repeat; }
